# solvix

./: .gitignore  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs-pages.yml  publish.yml  release-binaries.yml
adapters/: __init__.py  base.py  c_adapter.py  contracts.py  cpp_adapter.py  fallback_parser.py  go_adapter.py  java_adapter.py  javascript_adapter.py  kotlin_adapter.py  php_adapter.py  providers.py  python_adapter.py  ruby_adapter.py  rust_adapter.py  swift_adapter.py  typescript_adapter.py
cli/: __init__.py  main.py
context/: __init__.py  context_analyzer.py
core/: __init__.py  ai_overlay.py  ai_overlay_payload.py  cost_estimator.py  doctor.py  engine.py  language_detector.py  multi_lens_engine.py  parser_bootstrap.py  project_profiler.py  relevance_engine.py  report.py  synthesis_engine.py  version.py
docs/: ARCHITECTURE.md  CLI_UX_AND_RELEASE_READINESS.md  PROJECT_INTELLIGENCE_STAGE1.md  PROJECT_INTELLIGENCE_STAGE2.md  PROJECT_INTELLIGENCE_STAGE3.md  PROJECT_INTELLIGENCE_STAGE4.md  PROJECT_INTELLIGENCE_STAGE5.md  RELEASE_OPERATIONS.md  SMOKE_TESTS.md  WINGET_READINESS.md  index.html  site.css
output/: __init__.py  doctor_formatter.py  json_formatter.py  terminal_formatter.py  text_formatter.py
patterns/: __init__.py  pattern_registry.py  universal.py
scripts/: build_binary.py  generate_release_manifest.py  generate_winget_assets.py  generate_winget_manifest.py  install.sh  publish_homebrew_formula.py  update_homebrew_formula.py  write_checksums.py
tests/: __init__.py  test_all.py
(+20 files in other folders)
